# sprout-ai-coding-exercise

./: Dockerfile  README.md  blog_posts.db  docker-compose.yml  pyproject.toml  test.db
src/: content_model_service.py  database.py  main.py  ml_content_model_mock.py  models.py  schemas.py
tests/: test_content_model_service.py  test_main.py
